<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activatepackage"
                android:layout_margin="16dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/icon_arrow"
                android:textSize="25sp"/>

        </RelativeLayout>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Package"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="30dp"
            android:layout_marginStart="15dp"/>

    <!--Create a TextInputLayout and choose the style,
        for now we are choosing the OutlinedBox ExposedDropdownMenu -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp">




        <!-- Inside text input layout add
            an auto complete text view
                and make its input type to none-->
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/selectpackage"
            android:inputType="none"
            android:padding="3dp" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView4"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/selectype"
            android:inputType="none"
            android:padding="3dp" />

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectcourse"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:layout_marginStart="15dp"/>


            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/selectcourse"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courselevel"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/selectcourselevel"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectpackage"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:layout_marginStart="15dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView5"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/selectpack"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activatedate"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>


            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView6"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activatedate"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeofpayment"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:layout_marginStart="15dp"/>


            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView7"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/modeofpayment"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/razorpay"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:layout_marginStart="15dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView8"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enterorderid"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountpaid"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:layout_marginStart="15dp"/>


            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView9"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enteramountpaid"
                android:inputType="none"
                android:padding="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:backgroundTint="#006ee6"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:textColor="@color/white"
            style="@android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="@string/exit"
                android:backgroundTint="#ff0000"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>
